[package]
name = "mccheck"
version = "0.1.0"
authors = ["UnicornsOnLSD <44349936+UnicornsOnLSD@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-minecraft-ping = { git = "https://github.com/UnicornsOnLSD/async-minecraft-ping.git" }
colored = "2.0.0"
http = "0.2.5"
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"